--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,11 +3,6 @@ body {
 }
 
 
-.footer .icon-link {
-  font-size: 25px;
-  color: #000;
-}
-
 .link-block a {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -128,10 +123,10 @@ body {
   background-color: #f9f9f9;
 }
 
-.navbar {
+/* .navbar {
   background-color: #8498ac; 
   padding: 1rem 0; 
-}
+} */
 
 .navbar-menu {
   display: flex;
@@ -142,7 +137,7 @@ body {
 .navbar-item {
   color: #fff; 
   font-weight: bold; 
-  font-size: 1.1rem; 
+  font-size: 1.5rem; 
   margin: 0 1rem; 
   transition: color 0.3s ease;
 }
@@ -159,10 +154,10 @@ body {
   padding: 4rem 1.5rem;
 }
 
-.footer {
-  background-color: #8498ac;
-  color: #fff;
-}
+/* .footer {
+  background: linear-gradient(90deg, #004080, #8498ac); 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+} */
 
 video {
   width: 100%;
@@ -172,10 +167,82 @@ video {
 }
 
 .box {
-  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  transition: transform 0.3s ease;
+}
+
+.box:hover {
+  transform: translateY(-10px); 
 }
 
 p.has-text-centered {
   margin-top: 0.5rem;
   font-weight: bold;
+}
+
+.button {
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.button:hover {
+  background-color: #ffd700;
+  transform: scale(1.1); 
+}
+
+.navbar {
+  height: 100px;
+  background: linear-gradient(90deg, #004080, #8498ac); 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+.navbar-item {
+  color: #fff;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+/* .navbar-item:hover {
+  color: #ffd700; 
+} */
+
+.section {
+  background-image: url('./static/images/background.jpg'); /* 背景图片 */
+  background-size: cover;
+  background-position: center;
+  color: #222020; /* 改变文字颜色以适应背景 */
+}
+
+
+.footer {
+  /* background-color: #004080; */
+  color: #fff;
+  padding: 2rem 0;
+  background: linear-gradient(90deg, #004080, #8498ac); 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+.footer .icon-link {
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
+  /* color: #ffd700; */
+}
+
+.footer .icon-link:hover {
+  color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    height: 60px; 
+  }
+
+  .navbar-item {
+    font-size: 1.5rem; 
+    margin: 0 1rem; 
+  }
+
+  .navbar-item img {
+    height: 100px; 
+  }
 }
